# atlas-mysql-monitor

./: .env.example  .gitignore  CLAUDE.md  config.py  database.py  main.py  pyproject.toml
.superpowers/sdd/: final-review-diff.txt  final-review.md  progress.md  task-1-brief.md  task-1-report.md  task-1-review-diff.txt  task-1-review.md  task-2-brief.md  task-2-report.md  task-2-review-diff.txt  task-2-review.md  task-3-brief.md  task-3-report.md  task-3-review-diff.txt  task-3-review.md  task-4-brief.md  task-4-report.md  task-4-review-diff.txt  task-4-review.md  task-5-brief.md  task-5-report.md  task-5-review-diff.txt  task-5-review.md  task-6-brief.md  task-6-report.md  task-6-review-diff.txt  task-6-review.md  task-7-brief.md  task-7-report.md  task-7-review-diff.txt  task-7-review.md  task-8-brief.md  task-8-report.md  task-8-review-diff.txt  task-8-review.md  task-9-brief.md  task-9-report.md  task-9-review-diff.txt  task-9-review.md
collectors/: mysql_collector.py
docs/superpowers/plans/: 2026-07-07-atlas-mysql-monitor.md
docs/superpowers/specs/: 2026-07-07-atlas-mysql-monitor-design.md
models/: metrics.py
routes/: api.py  dashboard.py
static/css/: custom.css
templates/: base.html  dashboard.html
tests/: test_collector.py  test_config.py  test_database.py  test_metrics.py
